<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:layout_margin="16sp">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_rawRes="@raw/first"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvLoginTitle"
        android:text="@string/login_here"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:fontFamily="@font/aclonica"
        android:layout_below="@id/animationView"
        android:layout_marginTop="30sp"
        android:textAlignment="center"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/tvLoginTitle">

        <EditText
            android:id="@+id/etLoginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/allerta"
            android:hint="@string/username"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/allerta"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLoginForgetPassword"
            android:text="@string/forget_password"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_gravity="right"
            android:fontFamily="@font/allerta"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cbLoginShowHidePassword"
            android:text="@string/show_password"
            android:textStyle="bold|italic"
            android:textSize="16sp"
            android:fontFamily="@font/habibi"
            android:backgroundTint="@color/orange"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLoginLogin"
            android:layout_width="300dp"
            android:layout_height="50sp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape"
            android:fontFamily="@font/aclonica"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvLoginNewUser"
            android:text="@string/new_user"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:fontFamily="@font/allerta"
            android:layout_marginTop="20sp"
            android:textAlignment="center"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/acbtnLoginSignInWithGoogle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            android:background="@drawable/common_google_signin_btn_text_dark"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>