<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/icon_wifi"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opps"
        android:textColor="@color/dark_red"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="@font/aclonica"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_connection"
        android:textColor="@color/dark_red"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/habibi"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_check_your_connection"
        android:textColor="@color/dark_red"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/allerta"
        android:layout_marginTop="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCheckInternetConnectionRetry"
        android:text="@string/retry"
        android:textColor="@color/dark_red"
        android:background="@drawable/shape1"
        android:layout_margin="40dp"
        android:fontFamily="@font/aclonica"
        android:textSize="20dp"
        android:textStyle="bold"/>






</LinearLayout>