<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvName"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/allerta"
        android:layout_marginTop="20sp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvEmail"
        android:text="@string/email_id"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/allerta"
        android:layout_marginTop="20sp"
        android:textAlignment="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignOut"
        android:layout_width="300dp"
        android:layout_height="50sp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape"
        android:fontFamily="@font/aclonica"
        android:text="@string/signout"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="16sp"/>

</LinearLayout>