<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegistrationActivity"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/laRegistrationLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/first" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            app:cardBackgroundColor="@color/lightblue"
            app:cardCornerRadius="20sp"
            app:cardElevation="20sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/aclonica"
                    android:gravity="center"
                    android:text="@string/registration"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/habibi"
                    android:gravity="center"
                    android:text="@string/create_your_new_account"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />



                <EditText
                    android:id="@+id/etRegistrationName"
                    android:layout_width="335dp"
                    android:layout_height="50sp"
                    android:layout_margin="8sp"
                    android:background="@drawable/shape"
                    android:fontFamily="@font/aclonica"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:paddingStart="8sp"
                    android:textColorHint="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etRegistrationEmail"
                    android:layout_width="335dp"
                    android:layout_height="50sp"
                    android:layout_margin="8sp"
                    android:background="@drawable/shape"
                    android:fontFamily="@font/aclonica"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingStart="8sp"
                    />

                <EditText

                    android:layout_width="335dp"
                    android:layout_height="50sp"
                    android:id="@+id/etRegistrationPhone"
                    android:layout_margin="8sp"
                    android:background="@drawable/shape"
                    android:fontFamily="@font/aclonica"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:textColorHint="@color/black"
                    android:maxLength="10"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingStart="8sp"/>

                <EditText
                    android:id="@+id/etRegistrationUsername"
                    android:layout_width="335dp"
                    android:layout_height="50sp"
                    android:layout_margin="8sp"
                    android:background="@drawable/shape"
                    android:fontFamily="@font/aclonica"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:textColorHint="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingStart="8sp"/>


                <EditText
                    android:id="@+id/etRegistrationPassword"
                    android:layout_width="335dp"
                    android:layout_height="50sp"
                    android:layout_margin="8sp"
                    android:background="@drawable/shape"
                    android:fontFamily="@font/aclonica"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingStart="8sp"/>

                <EditText
                    android:id="@+id/etRegistrationAddress"
                    android:layout_width="335dp"
                    android:layout_height="50sp"
                    android:layout_margin="8sp"
                    android:background="@drawable/shape"
                    android:fontFamily="@font/aclonica"
                    android:hint="Address"
                    android:inputType="text"
                    android:textColorHint="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingStart="8sp"/>

                <CheckBox
                    android:id="@+id/cbRegistrationShowPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.6"
                    android:checked="false"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/show_password"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRegistrationRegistration"
                    android:layout_width="300dp"
                    android:layout_height="50sp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/shape"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
