<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetUpNewPasswordActivity"
    android:orientation="vertical">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_rawRes="@raw/first"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/etSetUpNewPasswordNewPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:fontFamily="@font/allerta"
        android:hint="@string/enter_new_password"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/et_bg_shape"
        android:paddingLeft="16sp"
        android:paddingEnd="16dp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/etSetUpNewPasswordConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:fontFamily="@font/allerta"
        android:hint="@string/enter_confirm_password"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/et_bg_shape"
        android:paddingLeft="16sp"
        android:paddingEnd="16dp"
        android:layout_marginTop="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnConfirmRegisterMobileNoSetUpNewPassword"
        android:text="@string/set_up_password"
        android:textColor="@color/white"
        android:background="@drawable/shape"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/allerta"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_gravity="center"/>



</LinearLayout>