<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyOTPActivity"
    android:orientation="vertical"
    android:gravity="center"
    >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/otpverification" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_verification"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/aclonica"
        android:layout_marginTop="20sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter the OTP to"
        android:textSize="14sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:fontFamily="@font/aclonica"
        android:layout_marginTop="4sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvVerifyOTPMobileno"
        android:text="+91 9921307675"
        android:textSize="14sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:fontFamily="@font/aclonica"
        android:layout_marginTop="4sp"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etVerifyOTPInputCode1"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginLeft="4dp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etVerifyOTPInputCode2"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginLeft="4dp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etVerifyOTPInputCode3"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginLeft="4dp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etVerifyOTPInputCode4"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginLeft="4dp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etVerifyOTPInputCode5"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginLeft="4dp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etVerifyOTPInputCode6"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginLeft="4dp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_receive_the_otp"
            android:textSize="14sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:fontFamily="@font/aclonica"
            android:layout_marginTop="4sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvVerifyResentOtp"
            android:text="@string/resent_otp"
            android:textSize="14sp"
            android:textStyle="normal"
            android:textColor="@color/red"
            android:fontFamily="@font/aclonica"
            android:layout_marginTop="4sp"
            android:layout_marginLeft="4dp"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/acbtnVerifyOTPVerify"
        android:text="@string/verify"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:background="@drawable/shape"
        android:layout_margin="30dp"/>

</LinearLayout>